fix(app.css): add overflow hidden to first child div to prevent unwanted scrolling

--- a/apps/mini/app/(app)/app.css
+++ b/apps/mini/app/(app)/app.css
@@ -68,6 +68,7 @@ body {
 
   & > div:first-child {
     height: 100%;
+    overflow: hidden !important;
   }
 }
 
